--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back"
     android:orientation="vertical"
     tools:context=".Main">
 
@@ -12,12 +13,13 @@
         android:layout_width="match_parent"
         android:gravity="center"
         android:textSize="35dp"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         android:layout_height="wrap_content"
         android:text="New Dish" />
 
     <EditText
         android:id="@+id/name"
+        android:textColorHint="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -29,7 +31,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textColor="#ffffff"
         android:inputType="numberDecimal"
+        android:textColorHint="#ffffff"
         android:hint="Price" />
 
     <RadioGroup
@@ -42,12 +46,14 @@
             android:id="@+id/main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#ffffff"
             android:layout_weight="1"
             android:text="Main" />
 
         <RadioButton
             android:id="@+id/desserts"
             android:layout_width="wrap_content"
+            android:textColor="#ffffff"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Desserts" />
@@ -55,6 +61,7 @@
         <RadioButton
             android:id="@+id/drinks"
             android:layout_width="wrap_content"
+            android:textColor="#ffffff"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Drinks" />
