--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,15 +6,16 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_height="match_parent"
+    android:background="@drawable/back"
     tools:context=".Main2">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40dp"
+        android:textSize="70dp"
         android:gravity="center"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         android:text="Swaiter" />
 
     <Space
