--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/back"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Menu">
@@ -10,8 +11,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
         android:textSize="30dp"
+        android:textColor="#ffffff"
         android:gravity="center"
         android:text="Menu" />
 
@@ -44,6 +45,7 @@
 
     <ListView
         android:id="@+id/menu"
+
         android:layout_width="match_parent"
         android:layout_height="320dp">
 
