--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back"
     android:orientation="vertical"
     tools:context=".Orders">
 
@@ -12,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Your orders"
-        android:textColor="#222222"
+        android:textColor="#ffffff"
         android:textSize="25dp" />
 
     <Space
@@ -38,7 +39,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Total price:"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         android:textSize="20dp" />
 
     <LinearLayout
