--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:layout_height="wrap_content"
+        android:textColor="#ffffff"
         android:layout_weight="3"
         android:text="TextView" />
 
@@ -19,6 +20,7 @@
 
     <TextView
         android:id="@+id/tvPrice"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:textSize="20dp"
         android:layout_weight="3"
