--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -16,7 +16,7 @@
         android:textSize="40dp"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:text="Crasits" />
+        android:text="Credits" />
 
     <TextView
         android:id="@+id/textView5"
