--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -15,22 +15,25 @@
         android:textColor="#ffffff"
         android:textSize="40dp"
         android:gravity="center"
-        android:layout_height="wrap_content"
+        android:layout_weight="0.2"
+        android:layout_height="0dp"
         android:text="Credits" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:textColor="#ffffff"
+        android:layout_weight="0.2"
         android:textSize="25dp"
         android:text="creator:Lior Attun" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:textColor="#ffffff"
+        android:layout_weight="0.2"
         android:textSize="25dp"
         android:text="Moderator: Albert Levy" />
 
@@ -38,6 +41,7 @@
         android:id="@+id/button2"
         android:onClick="bo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_weight="0.1"
+        android:layout_height="0dp"
         android:text="BACK" />
 </LinearLayout>
