--- a/app/src/main/res/layout/activity_orders_list.xml
+++ b/app/src/main/res/layout/activity_orders_list.xml
@@ -18,7 +18,7 @@
         android:textColor="#222222"
         android:textSize="50dp"
         android:gravity="center"
-        android:text="Last orders" />
+        android:text="Last orders!" />
 
     <LinearLayout
         android:layout_width="match_parent"
