--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -22,6 +22,7 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:textColor="#ffffff"
         android:layout_weight="0.2"
         android:ems="10"
         android:textColorHint="#ffffff"
@@ -31,6 +32,7 @@
     <EditText
         android:id="@+id/price"
         android:layout_width="match_parent"
+        android:textColor="#ffffff"
         android:layout_height="0dp"
         android:layout_weight="0.2"
         android:textColorHint="#ffffff"
