--- a/app/src/main/res/layout/activity_new_dish.xml
+++ b/app/src/main/res/layout/activity_new_dish.xml
@@ -21,6 +21,7 @@
     <EditText
         android:id="@+id/name"
         android:textColorHint="#ffffff"
+        android:textColor="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
